# cheetah3-cpp-codegen-sample

./: CMakeLists.txt  LICENSE  README.md
build_script/: build_gcc7_release.sh  build_msvc15_release.bat
cmake/: cheetah_wrapper.cmake  run_cheetah.py
custom_protocol/: CMakeLists.txt
custom_protocol/data_structs/: message_header.json
custom_protocol/templates/: message.tmpl.hpp
sample_app/: CMakeLists.txt  main.cpp
